--- a/cmd/faucet/faucet.html
+++ b/cmd/faucet/faucet.html
@@ -49,9 +49,9 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2">
 				<div class="input-group">
-					<input id="url" name="url" type="text" class="form-control" placeholder="Social network URL containing your Binance Smart Chain address...">
+					<input id="url" name="url" type="text" class="form-control" placeholder="your wallet address">
 					<span class="input-group-btn">
-								<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Give me Native Token	<i class="fa fa-caret-down" aria-hidden="true"></i></button>
+								<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Give me {{.Network}}	<i class="fa fa-caret-down" aria-hidden="true"></i></button>
 				        <ul class="dropdown-menu dropdown-menu-right">{{range $idx, $amount := .Amounts}}
 				          <li><a style="text-align: center;" onclick="tier={{$idx}};symbol='NativeToken'; {{if $.Recaptcha}}grecaptcha.execute(){{else}}submit({{$idx}}){{end}}">{{$amount}}</a></li>{{end}}
 				        </ul>
@@ -76,7 +76,7 @@
 						<table style="width: 100%"><tr>
 							<td style="text-align: center;"><i class="fa fa-rss" aria-hidden="true"></i> <span id="peers"></span> peers</td>
 							<td style="text-align: center;"><i class="fa fa-database" aria-hidden="true"></i> <span id="block"></span> blocks</td>
-							<td style="text-align: center;"><i class="fa fa-heartbeat" aria-hidden="true"></i> <span id="funds"></span> Native Tokens</td>
+							<td style="text-align: center;"><i class="fa fa-heartbeat" aria-hidden="true"></i> <span id="funds"></span> {{.Network}}s</td>
 							<td style="text-align: center;"><i class="fa fa-university" aria-hidden="true"></i> <span id="funded"></span> funded</td>
 						</tr></table>
 					</div>
